--- a/index.html
+++ b/index.html
@@ -55,145 +55,145 @@
             </button>
         </div>
         <section class="engineNotice">
-            <h1>Fonctionnement</h1>
-            <ol>
-                <li>
-                    <div class="engineNotice__li__icn">
-                        <i class="fas fa-mobile-alt"></i>
-                    </div>
-                    Choisissez un restaurant
-                </li>
-                <li>
-                    <div class="engineNotice__li__icn">
-                        <i class="fas fa-list-ul"></i>
-                    </div>
-                    Composez votre menu
-                </li>
-                <li>
-                    <div class="engineNotice__li__icn">
-                        <i class="fas fa-store"></i>
-                    </div>
-                    Dégustez au restaurant
-                </li>
-            </ol>
+            <div class="engineNotice__wrap">
+                <h1>Fonctionnement</h1>
+                <ol>
+                    <li>
+                        <div class="engineNotice__li__icn">
+                            <i class="fas fa-mobile-alt"></i>
+                        </div>
+                        Choisissez un restaurant
+                    </li>
+                    <li>
+                        <div class="engineNotice__li__icn">
+                            <i class="fas fa-list-ul"></i>
+                        </div>
+                        Composez votre menu
+                    </li>
+                    <li>
+                        <div class="engineNotice__li__icn">
+                            <i class="fas fa-store"></i>
+                        </div>
+                        Dégustez au restaurant
+                    </li>
+                </ol>
+            </div>
         </section>
 
         <section class="resto">
-            <h1>Restaurants</h1>
-            <div class="resto__item resto_new">
-                <a href="la-palette-du-gout.html">
-                    <div class="resto__item__pic">
-                        <img
-                            src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-                            alt=""
-                        />
-                        <div class="resto__item__pic__label">
-                            <span>Nouveau</span>
-                        </div>
-                    </div>
-                </a>
-
-                <div class="resto__item__bar">
+            <div class="resto__wrap">
+                <h1>Restaurants</h1>
+                <div class="resto__item resto_new">
                     <a href="la-palette-du-gout.html">
-                        <div class="resto__item__bar__infos">
-                            <h4 class="resto__item__bar__infos__name">
-                                La palette du goût
-                            </h4>
-                            <p class="resto__item__bar__infos__location">
-                                Ménilmontant
-                            </p>
+                        <div class="resto__item__pic">
+                            <img
+                                src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                                alt=""
+                            />
+                            <div class="resto__item__pic__label">
+                                <span>Nouveau</span>
+                            </div>
                         </div>
                     </a>
-                    <div class="resto__item__bar__fav">
-                        <div class="resto__item__bar__fav__icn">
-                            <i class="gradientIcon far fa-heart"></i>
+                    <div class="resto__item__bar">
+                        <a href="la-palette-du-gout.html">
+                            <div class="resto__item__bar__infos">
+                                <h4 class="resto__item__bar__infos__name">
+                                    La palette du goût
+                                </h4>
+                                <p class="resto__item__bar__infos__location">
+                                    Ménilmontant
+                                </p>
+                            </div>
+                        </a>
+                        <div class="resto__item__bar__fav">
+                            <div class="resto__item__bar__fav__icn">
+                                <i class="gradientIcon far fa-heart"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="resto__item resto_new">
-                <a href="la-note-enchantee.html">
-                    <div class="resto__item__pic">
-                        <img
-                            src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
-                            alt=""
-                        />
-                        <div class="resto__item__pic__label">
-                            <span>Nouveau</span>
-                        </div>
-                    </div>
-                </a>
-
-                <div class="resto__item__bar">
+                <div class="resto__item resto_new">
                     <a href="la-note-enchantee.html">
-                        <div class="resto__item__bar__infos">
-                            <h4 class="resto__item__bar__infos__name">
-                                La note enchantée
-                            </h4>
-                            <p class="resto__item__bar__infos__location">
-                                Charonne
-                            </p>
+                        <div class="resto__item__pic">
+                            <img
+                                src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                                alt=""
+                            />
+                            <div class="resto__item__pic__label">
+                                <span>Nouveau</span>
+                            </div>
                         </div>
                     </a>
-                    <div class="resto__item__bar__fav">
-                        <div class="resto__item__bar__fav__icn">
-                            <i class="gradientIcon far fa-heart"></i>
+                    <div class="resto__item__bar">
+                        <a href="la-note-enchantee.html">
+                            <div class="resto__item__bar__infos">
+                                <h4 class="resto__item__bar__infos__name">
+                                    La note enchantée
+                                </h4>
+                                <p class="resto__item__bar__infos__location">
+                                    Charonne
+                                </p>
+                            </div>
+                        </a>
+                        <div class="resto__item__bar__fav">
+                            <div class="resto__item__bar__fav__icn">
+                                <i class="gradientIcon far fa-heart"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="resto__item">
-                <a href="a-la-française.html">
-                    <div class="resto__item__pic">
-                        <img
-                            src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-                            alt=""
-                        />
-                    </div>
-                </a>
-
-                <div class="resto__item__bar">
+                <div class="resto__item">
                     <a href="a-la-française.html">
-                        <div class="resto__item__bar__infos">
-                            <h4 class="resto__item__bar__infos__name">
-                                À la française
-                            </h4>
-                            <p class="resto__item__bar__infos__location">
-                                Cité Rouge
-                            </p>
+                        <div class="resto__item__pic">
+                            <img
+                                src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                                alt=""
+                            />
                         </div>
                     </a>
-                    <div class="resto__item__bar__fav">
-                        <div class="resto__item__bar__fav__icn">
-                            <i class="gradientIcon far fa-heart"></i>
+                    <div class="resto__item__bar">
+                        <a href="a-la-française.html">
+                            <div class="resto__item__bar__infos">
+                                <h4 class="resto__item__bar__infos__name">
+                                    À la française
+                                </h4>
+                                <p class="resto__item__bar__infos__location">
+                                    Cité Rouge
+                                </p>
+                            </div>
+                        </a>
+                        <div class="resto__item__bar__fav">
+                            <div class="resto__item__bar__fav__icn">
+                                <i class="gradientIcon far fa-heart"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="resto__item">
-                <a href="Le-delice-des-sens.html">
-                    <div class="resto__item__pic">
-                        <img
-                            src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                            alt=""
-                        />
-                    </div>
-                </a>
-
-                <div class="resto__item__bar">
+                <div class="resto__item">
                     <a href="Le-delice-des-sens.html">
-                        <div class="resto__item__bar__infos">
-                            <h4 class="resto__item__bar__infos__name">
-                                Le délice des sens
-                            </h4>
-                            <p class="resto__item__bar__infos__location">
-                                Folie-Méricourt
-                            </p>
+                        <div class="resto__item__pic">
+                            <img
+                                src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                                alt=""
+                            />
                         </div>
                     </a>
-                    <div class="resto__item__bar__fav">
-                        <div class="resto__item__bar__fav__icn">
-                            <i class="gradientIcon far fa-heart"></i>
+                    <div class="resto__item__bar">
+                        <a href="Le-delice-des-sens.html">
+                            <div class="resto__item__bar__infos">
+                                <h4 class="resto__item__bar__infos__name">
+                                    Le délice des sens
+                                </h4>
+                                <p class="resto__item__bar__infos__location">
+                                    Folie-Méricourt
+                                </p>
+                            </div>
+                        </a>
+                        <div class="resto__item__bar__fav">
+                            <div class="resto__item__bar__fav__icn">
+                                <i class="gradientIcon far fa-heart"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
