--- a/a-la-française.html
+++ b/a-la-française.html
@@ -6,8 +6,7 @@
         <title>Ohmyfood - À la française - Réservation en ligne</title>
         <meta name="description" content="" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" href="css/main.css" />
-        <link rel="stylesheet" href="css/pages.css" />
+        <link rel="stylesheet" href="css/style.css" />
 
         <link
             rel="stylesheet"
