--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
         <title>Ohmyfood - Réservation en ligne</title>
         <meta name="description" content="Réservez le menu qui vous convient" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" href="css/main.css" />
-
+        <link rel="stylesheet" href="css/style.css" />
         <link
             rel="stylesheet"
             href="https://fonts.googleapis.com/css?family=Shrikhand"
