--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -6,9 +6,7 @@
         <title>Ohmyfood - La palette du goût - Réservation en ligne</title>
         <meta name="description" content="" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" href="css/main.css" />
-        <link rel="stylesheet" href="css/pages.css" />
-
+        <link rel="stylesheet" href="css/style.css" />
         <link
             rel="stylesheet"
             href="https://fonts.googleapis.com/css?family=Shrikhand"
