--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                 Explorer nos restaurants
             </button>
         </div>
+        <!-- Description ohmyfood -->
         <section class="engineNotice">
             <div class="engineNotice__wrap">
                 <h2>Fonctionnement</h2>
